[package]
name = "tempomat"
description = "Minimal Tempo+Jira time logging CLI"
authors = ["Maxicarlos08 <maxicarlos08@gmail.com>"]
license = "MIT"
repository = "https://github.com/maxicarlos08/tempomat"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Optimized for size
[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
axum = { version = "0.6.12", features = ["macros"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
directories = "5.0.0"
nom = "7.1.3"
open = "4.0.1"
reqwest = { version = "0.11.16", features = ["json"] }
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = "0.3.16"
